-
Type:
Bug
-
Resolution: Fixed
-
Priority:
Major - P3
-
Affects Version/s: None
-
Component/s: Sharding
-
Fully Compatible
-
ALL
-
v5.1, v5.0, v4.4
-
Sharding 2020-10-19, Sharding 2020-11-02, Sharding 2020-11-16, Sharding 2020-11-30, Sharding 2020-12-14, Sharding 2020-12-28, Sharding 2021-01-11, Sharding 2021-01-25, Sharding 2021-02-22, Sharding 2021-03-08, Sharding 2021-03-22, Sharding 2021-04-05, Sharding 2021-04-19, Sharding 2021-05-03, Sharding 2021-05-17, Sharding 2021-10-18, Sharding 2021-11-01
-
(copied to CRM)
-
None
-
None
-
None
-
None
-
None
-
None
-
None
Setup: v4.4.0, sharded cluster: 1 shard, 2 mongos
Scenario: 100 thread concurrently executing findOne operations, with random sleeps between 1 and 1000 milliseconds
Action: Every once in a while kill a mongos server
Expected result: mongos server that is being killed only responds with retryable errors
Actual result: mongos server returns a non-retryable error:
{
“ok”: 0.0,
“errmsg”: “Encountered non-retryable error during query :: caused by :: ReplicaSetMonitor for set shard01 is removed”,
“code”: 199,
“codeName”: “ReplicaSetMonitorRemoved”, ...
}
- is related to
-
PYTHON-3016 Fix flakey tests in drivers-atlas-testing
-
- Closed
-
-
SERVER-60975 Make ReplicaSetMonitorRemoved retryable
-
- Backlog
-
- related to
-
SERVER-124947 Differentiate ReplicaSetMonitor removal error codes: shard removal vs. process shutdown
-
- Needs Scheduling
-