SERVER-51329: Fix Unexpected non-retryable error when shutting down a

(cherry picked from commit 651f4a692aa59353954d3cd18ec3572fa9bf48aa)